[package]
name = "rustask"
version = "0.1.0"
edition = "2021"
authors = ["gonchihernandez"]
description = "A simple and elegant task manager from the command line built with Rust"
license = "MIT"
repository = "https://github.com/gonchihernandez/rustask"
homepage = "https://github.com/gonchihernandez/rustask"
documentation = "https://github.com/gonchihernandez/rustask#readme"
keywords = ["cli", "tasks", "productivity", "todo", "rust"]
categories = ["command-line-utilities"]
readme = "README.md"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.48", features = ["derive"] }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
